changes from class

--- a/notebooks/0.4 - SQL - Flights.ipynb
+++ b/notebooks/0.4 - SQL - Flights.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pyspark\n",
@@ -35,10 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "!rm -rf metastore_db/\n",
@@ -62,10 +58,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
@@ -103,21 +97,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2019-03-15 14:37:04--  https://dsr-data.s3.amazonaws.com/flights/flights14.csv\n",
+      "Resolving dsr-data.s3.amazonaws.com (dsr-data.s3.amazonaws.com)... 52.219.73.105\n",
+      "Connecting to dsr-data.s3.amazonaws.com (dsr-data.s3.amazonaws.com)|52.219.73.105|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 16150465 (15M) [text/csv]\n",
+      "Saving to: ‘flights14.csv’\n",
+      "\n",
+      "flights14.csv       100%[===================>]  15.40M   907KB/s    in 18s     \n",
+      "\n",
+      "2019-03-15 14:37:23 (887 KB/s) - ‘flights14.csv’ saved [16150465/16150465]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "!wget https://dsr-data.s3.amazonaws.com/flights/flights14.csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "flights = sc.textFile(\"flights14.csv\").map(load_csv).filter(lambda e: not e[0] == \"year\").map(parseElement).cache()"
@@ -156,9 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sqlContext.sql(\"select * from flight where dest = 'LAX'\").take(5)"
@@ -167,9 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "flightsDF.where(\"origin = 'JFK' AND dest = 'MIA'\").count()"
@@ -178,9 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "flightsDF.where(\"origin = 'JFK' AND dest = 'MIA'\").limit(2).collect()"
@@ -250,7 +252,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -264,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
