--- a/notebooks/DF 3.2.2 - Handling NAs.ipynb
+++ b/notebooks/DF 3.2.2 - Handling NAs.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pyspark\n",
@@ -14,10 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "!rm -rf metastore_db/*.lck\n",
@@ -35,10 +31,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from numpy import NaN\n",
@@ -51,10 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql.functions import rand, randn\n",
@@ -69,11 +61,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-------------------+--------------------+\n",
+      "| id|            uniform|              normal|\n",
+      "+---+-------------------+--------------------+\n",
+      "|  0|                NaN| -1.2904230199480902|\n",
+      "|  1|0.06498948189958098|-0.05248092572410684|\n",
+      "|  2|                NaN|                 NaN|\n",
+      "|  3|0.41371264720975787| -0.5877482396744728|\n",
+      "|  4|                NaN|                 NaN|\n",
+      "+---+-------------------+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "dfnan.show()"
    ]
@@ -94,11 +101,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-------------------+--------------------+\n",
+      "| id|            uniform|              normal|\n",
+      "+---+-------------------+--------------------+\n",
+      "|  0|                NaN| -1.2904230199480902|\n",
+      "|  1|0.06498948189958098|-0.05248092572410684|\n",
+      "|  3|0.41371264720975787| -0.5877482396744728|\n",
+      "+---+-------------------+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "dfnan.na.drop(how='all',subset=['uniform','normal']).show()"
    ]
@@ -112,11 +132,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-------------------+--------------------+\n",
+      "| id|            uniform|              normal|\n",
+      "+---+-------------------+--------------------+\n",
+      "|  0|                0.0| -1.2904230199480902|\n",
+      "|  1|0.06498948189958098|-0.05248092572410684|\n",
+      "|  2|                0.0|                 NaN|\n",
+      "|  3|0.41371264720975787| -0.5877482396744728|\n",
+      "|  4|                0.0|                 NaN|\n",
+      "+---+-------------------+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "dfnan.na.replace([NaN],[0.0], 'uniform').show()"
    ]
@@ -130,22 +165,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-------------------+--------------------+\n",
+      "| id|            uniform|              normal|\n",
+      "+---+-------------------+--------------------+\n",
+      "|  0|                0.0| -1.2904230199480902|\n",
+      "|  1|0.06498948189958098|-0.05248092572410684|\n",
+      "|  2|                0.0|                 1.0|\n",
+      "|  3|0.41371264720975787| -0.5877482396744728|\n",
+      "|  4|                0.0|                 1.0|\n",
+      "+---+-------------------+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "dfnan.na.fill({'uniform': 0.0, 'normal': 1.0}).show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+-------------------+--------------------+\n",
+      "|summary|            uniform|              normal|\n",
+      "+-------+-------------------+--------------------+\n",
+      "|  count|                  2|                   2|\n",
+      "|   mean|0.23935106455466942|-0.32011458269928983|\n",
+      "| stddev|0.24658451494766348|  0.3784911474418124|\n",
+      "|    min|0.06498948189958098| -0.5877482396744728|\n",
+      "|    max|0.41371264720975787|-0.05248092572410684|\n",
+      "+-------+-------------------+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "dfsummary = dfnan.drop(\"id\").na.drop(how='any').describe()\n",
     "dfsummary.show()"
@@ -153,11 +218,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.23935106455466942\n"
+     ]
+    }
+   ],
    "source": [
     "uniformMean = float(dfsummary.rdd.collect()[1][1])\n",
     "print(uniformMean)"
@@ -165,11 +236,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>uniform</th>\n",
+       "      <th>normal</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>summary</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.23935106455466942</td>\n",
+       "      <td>-0.32011458269928983</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>stddev</th>\n",
+       "      <td>0.24658451494766348</td>\n",
+       "      <td>0.3784911474418124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.06498948189958098</td>\n",
+       "      <td>-0.5877482396744728</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>0.41371264720975787</td>\n",
+       "      <td>-0.05248092572410684</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     uniform                normal\n",
+       "summary                                           \n",
+       "count                      2                     2\n",
+       "mean     0.23935106455466942  -0.32011458269928983\n",
+       "stddev   0.24658451494766348    0.3784911474418124\n",
+       "min      0.06498948189958098   -0.5877482396744728\n",
+       "max      0.41371264720975787  -0.05248092572410684"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pandasSummary = dfsummary.toPandas().set_index(\"summary\")\n",
     "pandasSummary"
@@ -177,11 +321,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.23935106455466942\n"
+     ]
+    }
+   ],
    "source": [
     "uniformMean = float(pandasSummary.loc['mean'].uniform)\n",
     "print(uniformMean)"
@@ -189,11 +339,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.32011458269928983\n"
+     ]
+    }
+   ],
    "source": [
     "normalMean = float(pandasSummary.loc['mean'].normal)\n",
     "print(normalMean)"
@@ -201,11 +357,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-------------------+--------------------+\n",
+      "| id|            uniform|              normal|\n",
+      "+---+-------------------+--------------------+\n",
+      "|  0|0.23935106455466942| -1.2904230199480902|\n",
+      "|  1|0.06498948189958098|-0.05248092572410684|\n",
+      "|  2|0.23935106455466942|-0.32011458269928983|\n",
+      "|  3|0.41371264720975787| -0.5877482396744728|\n",
+      "|  4|0.23935106455466942|-0.32011458269928983|\n",
+      "+---+-------------------+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "dfnan.na.fill({\"uniform\": uniformMean, \"normal\": normalMean}).show()"
    ]
@@ -231,9 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dfDuplicates.show()"
@@ -242,9 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dfDuplicates.dropDuplicates([\"uniform\",\"normal\"]).show()"
@@ -274,7 +441,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -288,7 +455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
