--- a/notebooks/RDD Log Exercise.ipynb
+++ b/notebooks/RDD Log Exercise.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +20,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2019-03-16 16:24:50--  ftp://ita.ee.lbl.gov/traces/NASA_access_log_Jul95.gz\n",
+      "           => ‘NASA_access_log_Jul95.gz’\n",
+      "Resolving ita.ee.lbl.gov (ita.ee.lbl.gov)... 131.243.2.164, 2620:83:8000:102::a4\n",
+      "Connecting to ita.ee.lbl.gov (ita.ee.lbl.gov)|131.243.2.164|:21... connected.\n",
+      "Logging in as anonymous ... Logged in!\n",
+      "==> SYST ... done.    ==> PWD ... done.\n",
+      "==> TYPE I ... done.  ==> CWD (1) /traces ... done.\n",
+      "==> SIZE NASA_access_log_Jul95.gz ... 20676672\n",
+      "==> PASV ... done.    ==> RETR NASA_access_log_Jul95.gz ... done.\n",
+      "Length: 20676672 (20M) (unauthoritative)\n",
+      "\n",
+      "NASA_access_log_Jul   3%[                    ] 772.19K   244KB/s    eta 79s    ^C\n",
+      "gzip: NASA_access_log_Jul95 already exists; do you wish to overwrite (y or n)? ^C\n"
+     ]
+    }
+   ],
    "source": [
-    "#!wget ftp://ita.ee.lbl.gov/traces/NASA_access_log_Jul95.gz\n",
-    "#!gunzip NASA_access_log_Jul95.gz"
+    "!wget ftp://ita.ee.lbl.gov/traces/NASA_access_log_Jul95.gz\n",
+    "!gunzip NASA_access_log_Jul95.gz"
    ]
   },
   {
@@ -37,12 +57,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "199.72.81.55 - - [01/Jul/1995:00:00:01 -0400] \"GET /history/apollo/ HTTP/1.0\" 200 6245\n"
+     ]
+    }
+   ],
+   "source": [
+    "sc = spark.sparkContext\n",
+    "# INSERT CODE HERE\n",
+    "rdd = sc.textFile('NASA_access_log_Jul95')\n",
+    "sample_line = rdd.take(1)[0]\n",
+    "print(sample_line)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc = spark.sparkContext\n",
-    "# INSERT CODE HERE"
+    "#weblog.findall(sample_line)[0]\n",
+    "weblog.findall(\"Hello world\")"
    ]
   },
   {
@@ -54,11 +95,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1891715"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# INSERT CODE HERE"
+    "# INSERT CODE HERE\n",
+    "def non_empty(line):\n",
+    "    return len(line) > 0\n",
+    "\n",
+    "non_empty(sample_line)\n",
+    "\n",
+    "rdd.filter(non_empty).count()"
    ]
   },
   {
@@ -70,9 +128,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Malformed lines: 1902\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "# host unused user time method resource status size referer agent \n",
@@ -83,9 +149,27 @@
     "# Make sure you return an empty string ('') \n",
     "# whenever you find a malformed line\n",
     "\n",
+    "malformed_lines = sc.accumulator(0)\n",
+    "#bad_line = spark.sparkContext.accumulator(0)\n",
     "def process_logs(line):\n",
     "    # INSERT CODE HERE\n",
-    "    pass"
+    "    global malformed_lines\n",
+    "    if len(weblog.findall(line)) == 0:\n",
+    "        malformed_lines.add(1)\n",
+    "        return ''\n",
+    "    else:\n",
+    "        return weblog.findall(line)[0]\n",
+    "\n",
+    "#def process_logs(line):\n",
+    "#    try:\n",
+    "#        return weblog.findall(line)[0]\n",
+    "#    except IndexError:\n",
+    "#        malformed_lines.add(1)\n",
+    "#        return ''\n",
+    "\n",
+    "log_entries = rdd.map(process_logs)\n",
+    "log_entries.count() # just for triggering lazy spark\n",
+    "print(f\"Malformed lines: {malformed_lines.value}\")"
    ]
   },
   {
@@ -309,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
