--- a/notebooks/Vectorized Pandas UDF.ipynb
+++ b/notebooks/Vectorized Pandas UDF.ipynb
@@ -11,10 +11,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
@@ -24,10 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql.types import *\n",
@@ -44,9 +40,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+--------------------+\n",
+      "| id|                   v|\n",
+      "+---+--------------------+\n",
+      "|  0|  0.4917315993168584|\n",
+      "|  0|  0.6830978687882945|\n",
+      "|  0|  0.6967292478580108|\n",
+      "|  0|  0.5330224808990087|\n",
+      "|  0| 0.31034704267832225|\n",
+      "|  0|  0.8427002020861013|\n",
+      "|  0|0.008467564352229173|\n",
+      "|  0|  0.3021212852320725|\n",
+      "|  0| 0.16642524773908296|\n",
+      "|  0|  0.5476156409119556|\n",
+      "|  0| 0.18672507050672638|\n",
+      "|  0|  0.8288473288306182|\n",
+      "|  0|  0.8076462806042917|\n",
+      "|  0| 0.46449287675665096|\n",
+      "|  0|  0.9990213727642135|\n",
+      "|  0| 0.21229703126054356|\n",
+      "|  0| 0.07361525824964887|\n",
+      "|  0|  0.5812498316968616|\n",
+      "|  0| 0.35964624643028764|\n",
+      "|  0|  0.8500101328260457|\n",
+      "+---+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1000000"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = spark.range(0, 1000 * 1000).withColumn('id', (col('id') / 1000).cast('integer')).withColumn('v', rand())\n",
     "df.cache()\n",
@@ -274,21 +313,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
