--- a/notebooks/DF 1.1.3 - Explode, UDF and Pivot.ipynb
+++ b/notebooks/DF 1.1.3 - Explode, UDF and Pivot.ipynb
@@ -29,9 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from collections import namedtuple\n",
@@ -49,9 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql.functions import explode\n",
@@ -62,9 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql.functions import UserDefinedFunction\n",
@@ -82,9 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "exploded = exploded.withColumn(\"share\", exploded.commission / exploded.num_reps).drop(\"num_reps\")\n",
@@ -94,9 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "exploded.groupBy(\"sales_rep\").pivot(\"year\").sum(\"share\").orderBy(\"sales_rep\").show()"
@@ -105,9 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "exploded.groupBy(\"account\", \"sales_rep\").pivot(\"year\").sum(\"share\").orderBy(\"account\", \"sales_rep\").show()"
@@ -137,7 +125,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -151,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
